# tiago_finder

./: README.md  package.xml  setup.cfg  setup.py
archive/: coverage_navigation.py  head_turn_at_waypoint.py  head_turner.py
config/: global_config.yaml  motions.yaml  tiago_nav2.yaml
config/waypoints/: W_1.yaml
launch/: object_find_system.launch.py  system_bringup.launch.py
maps/: W1_map.pgm  W1_map.yaml
rviz/: rviz_tiago_finder.rviz  rviz_tiago_finder_prev.rviz
tiago_finder/: coverage_navigation.py  goal_manager.py  head_turn_server.py  head_turner.py  my_node.py  voice_control.py  waypoint_manager.py  waypoint_manager_2.py  yolo_detection.py
