<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tiago_finder</name>
  <version>0.0.0</version>
  <description>Tiago object finder</description>
  <maintainer email="bartek-sosik@wp.pl">bsosik</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>tiago_gazebo</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>play_motion2_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
